--- a/week5.homework.done.html
+++ b/week5.homework.done.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SheCodes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="week5.homework.done.css">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
@@ -45,7 +45,7 @@
     <button>Current</button>
 
     
-  <script src="index.js"></script>
+  <script src="week5.homework.done.js"></script>
   <script src="https://kit.fontawesome.com/374fb432ca.js" crossorigin="anonymous"></script>
 
   </div>
